[project]
name = "kaiwadb"
version = "0.2.0"
description = "Have conversation with your relational database using natural language"
readme = "README.md"
authors = [{ name = "Jiří Klimeš", email = "klimes@deepvision.cz" }]
requires-python = ">=3.12"
dependencies = [
    "cbor2>=5.6.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.3",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]


[dependency-groups]
dev = ["datamodel-code-generator>=0.28.5", "pre-commit>=4.0.1", "ruff>=0.7.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kaiwadb"]

[tool.ruff]
line-length = 110
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
